<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_backgroundx"
    android:padding="20dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activitiesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/activities"
        android:textColor="@color/eco_background"
        android:textColorLink="@color/eco_on_primary_container"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookingsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/bookings"
        android:textColor="@color/eco_background"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activityCalendarBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/activity_calendar_button"
        android:textColor="@color/eco_background"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/eco_on_primary"
        android:textSize="18sp"
        app:backgroundTint="#FF4C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/resort_info"
        android:textColor="@color/eco_background"
        android:textColorLink="@color/app_name_color"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="©2026 All Rights Reserved. EcoStay Retreat Sri Lanka"
        android:textColor="@color/eco_outline"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/profile"
        android:textColor="@color/eco_background"
        android:textColorLink="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/roomsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/rooms"
        android:textColor="@color/eco_background"
        android:textColorHighlight="@color/eco_on_primary_container"
        android:textColorHint="@color/eco_on_primary_container"
        android:textSize="18sp"
        app:backgroundTint="@color/eco_on_primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1000dp"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/alata"
        android:text="EcoStay"
        android:textAllCaps="true"
        android:textColor="#007309"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recharge your Soul"
        android:textColor="#004305"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reconnect with Nature,"
        android:textColor="#004305"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="Retreat"
        android:textAllCaps="true"
        android:textColor="#007309"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>

